--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.kwohlford.smartplaylistmanager" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,10 +11,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        tools:ignore="UnusedAttribute">
+        tools:ignore="UnusedAttribute" >
         <activity
-            android:name=".TrackListActivity"
-            android:label="@string/app_name" >
+            android:name=".tracklist.TrackListActivity"
+            android:label="@string/title_activity_tracklist"
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,10 +23,20 @@
             </intent-filter>
         </activity>
 
-        // Needed for LoginActivity to work
+        // spotify login activity
         <activity
             android:name="com.spotify.sdk.android.authentication.LoginActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
+        <activity
+            android:name=".tracklist.EditTagsActivity"
+            android:label="@string/title_activity_edittags"
+            android:theme="@android:style/Theme.Holo.Light.Dialog"
+            android:parentActivityName=".tracklist.TrackListActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".tracklist.TrackListActivity" />
+        </activity>
     </application>
 
 </manifest>
